Return 204 if no favicon is defined to fix CSRF token error on initial page load

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -30,8 +30,13 @@ http {
         server_name _;
 
         root /var/www/html;
+
         location / {
             try_files $uri $uri/ /index.php$is_args$args;
+        }
+
+        location = /favicon.ico {
+            try_files $uri =204;
         }
 
         location ~ \.php$ {
